--- a/firequiz-app/src/styles/components/_quiz-instructions.scss
+++ b/firequiz-app/src/styles/components/_quiz-instructions.scss
@@ -7,6 +7,34 @@
     h1 {
         color: black;
         font-size: $md;
+        font-weight: bold;
         text-align: center;
     }
+
+    p {
+        background-color: black;
+        color: white;
+        font-weight: bold;
+        padding: 5px 5px;
+    }
+
+    /*.lifeline {
+        position: relative;
+        top: -10px;
+    }*/
+
+    .lifeline-icon {
+        color: green;
+        cursor: pointer;
+    }
+
+    .browser-default {
+        padding-left: 30px;
+        margin-top: 10px;
+        margin-bottom: 15px;
+    }
+}
+
+@media (max-width: $md-breakpoint) {
+    // null
 }
