--- a/firequiz-app/src/styles/components/_play.scss
+++ b/firequiz-app/src/styles/components/_play.scss
@@ -20,6 +20,16 @@
         top: -3px;
     }
 
+    .lifeline-icon {
+        color: green;
+        cursor: pointer;
+    }
+
+    .lifeline-icon:hover {
+        background-color: none;
+        color: darken(orange, 10%);
+    }
+
     h4 {
         font-size: 1.2rem;
         margin-bottom: $lg;
