--- a/firequiz-app/src/styles/base/_base.scss
+++ b/firequiz-app/src/styles/base/_base.scss
@@ -18,3 +18,10 @@ body {
     border-radius: 5px !important;
     color: $off-white !important;
 }
+
+.disable {
+    background-color: #ccc !important;
+    box-shadow: none !important;
+    pointer-events: none !important;
+    opacity: 0.9;
+}
