--- a/firequiz-app/src/styles/styles.scss
+++ b/firequiz-app/src/styles/styles.scss
@@ -5,3 +5,4 @@
 @import './components/quiz-instructions';
 @import './components/play';
 @import './components/quiz-summary';
+@import './components/player-setup';
